--- a/localisation/more_mapmodes_l_japanese.yml
+++ b/localisation/more_mapmodes_l_japanese.yml
@@ -4,19 +4,12 @@
  DOTTET_LINE_SEPERATOR: "\n--------------\n"
 
  # Map Modes:
- more_mapmodes_core_map_mode: "Core States"
+ more_mapmodes_core_map_mode: "中核州"
  MAPMODE_MORE_MAPMODES_CORE_MAP_MODE: "§Y$more_mapmodes_core_map_mode$§! $MAPMODE_CONSTANT$"
  MAPMODE_MORE_MAPMODES_CORE_MAP_MODE_NAME: "$more_mapmodes_core_map_mode$"
  MAPMODE_MORE_MAPMODES_CORE_MAP_MODE_DESCRIPTION: "Shows our core states, non-core states and occupied states in different colors."
  more_mapmodes_core_map_mode_tooltip: "[From.GetMoreMapModesCoreMapModeTooltip]"
  more_mapmodes_core_map_mode_tooltip_delayed: "[From.GetMoreMapModesCoreMapModeTooltipDelayed]"
-
- more_mapmodes_caused_world_tension_map_mode: "$WORLD_TENSION_NAME$"
- MAPMODE_MORE_MAPMODES_CAUSED_WORLD_TENSION_MAP_MODE: "§Y$more_mapmodes_caused_world_tension_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_CAUSED_WORLD_TENSION_MAP_MODE_NAME: "$more_mapmodes_caused_world_tension_map_mode$"
- MAPMODE_MORE_MAPMODES_CAUSED_WORLD_TENSION_MAP_MODE_DESCRIPTION: "Shows how much world tension each country has caused."
- more_mapmodes_caused_world_tension_map_mode_tooltip: "[From.Controller.GetMoreMapModesCausedWorldTensionMapModeTooltip]"
- more_mapmodes_caused_world_tension_map_mode_tooltip_delayed: ""
 
  more_mapmodes_stability_map_mode: "$STABILITY$"
  MAPMODE_MORE_MAPMODES_STABILITY_MAP_MODE: "§Y$more_mapmodes_stability_map_mode$§! $MAPMODE_CONSTANT$"
@@ -32,81 +25,32 @@
  more_mapmodes_war_support_map_mode_tooltip: "§Y[From.Controller.GetNameWithFlag]§! currently has a war support of §Y[?From.Controller:has_war_support|2%]§!."
  more_mapmodes_war_support_map_mode_tooltip_delayed: "[From.Controller.GetMoreMapModesWarSupportMapModeTooltipDelayed]"
 
- more_mapmodes_war_goals_map_mode: "War Goals on us"
- MAPMODE_MORE_MAPMODES_WAR_GOALS_MAP_MODE: "§Y$more_mapmodes_war_goals_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_WAR_GOALS_MAP_MODE_NAME: "$more_mapmodes_war_goals_map_mode$"
- MAPMODE_MORE_MAPMODES_WAR_GOALS_MAP_MODE_DESCRIPTION: "Shows which countries currently are justifying or already have a war goal against us."
- more_mapmodes_war_goals_map_mode_tooltip: "[From.Controller.GetMoreMapModesWarGoalsMapModeTooltip]"
- more_mapmodes_war_goals_map_mode_tooltip_delayed: ""
-
- more_mapmodes_anti_air_map_mode: "$anti_air_building$ Level"
+ more_mapmodes_anti_air_map_mode: "$anti_air_building$"
  MAPMODE_MORE_MAPMODES_ANTI_AIR_MAP_MODE: "§Y$more_mapmodes_anti_air_map_mode$§! $MAPMODE_CONSTANT$"
  MAPMODE_MORE_MAPMODES_ANTI_AIR_MAP_MODE_NAME: "$more_mapmodes_anti_air_map_mode$"
  MAPMODE_MORE_MAPMODES_ANTI_AIR_MAP_MODE_DESCRIPTION: "Shows the level of §Y$anti_air_building_plural$§! in each state controlled by us, our allies and our enemies."
  more_mapmodes_anti_air_map_mode_tooltip: "[From.Controller.GetMoreMapModesAntiAirMapModeTooltip]"
  more_mapmodes_anti_air_map_mode_tooltip_delayed: "[From.Controller.GetMoreMapModesAntiAirMapModeTooltipDelayed]"
 
- more_mapmodes_air_base_map_mode: "$air_base$ Level"
+ more_mapmodes_air_base_map_mode: "$air_base$"
  MAPMODE_MORE_MAPMODES_AIR_BASE_MAP_MODE: "§Y$more_mapmodes_air_base_map_mode$§! $MAPMODE_CONSTANT$"
  MAPMODE_MORE_MAPMODES_AIR_BASE_MAP_MODE_NAME: "$more_mapmodes_air_base_map_mode$"
  MAPMODE_MORE_MAPMODES_AIR_BASE_MAP_MODE_DESCRIPTION: "Shows the level of §Y$air_base_plural$§! in each state controlled by us, our allies and our enemies."
  more_mapmodes_air_base_map_mode_tooltip: "[From.Controller.GetMoreMapModesAirBaseMapModeTooltip]"
  more_mapmodes_air_base_map_mode_tooltip_delayed: "[From.Controller.GetMoreMapModesAirBaseMapModeTooltipDelayed]"
 
- more_mapmodes_intervention_map_mode: "Our Interventions"
- MAPMODE_MORE_MAPMODES_INTERVENTION_MAP_MODE: "§Y$more_mapmodes_intervention_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_INTERVENTION_MAP_MODE_NAME: "$more_mapmodes_intervention_map_mode$"
- MAPMODE_MORE_MAPMODES_INTERVENTION_MAP_MODE_DESCRIPTION: "Shows the countries we have volunteers or expeditionary forces in or from."
- more_mapmodes_intervention_map_mode_tooltip: "[From.Controller.GetMoreMapModesInterventionMapModeTooltip]"
- more_mapmodes_intervention_map_mode_tooltip_delayed: ""
-
- more_mapmodes_majors_map_mode: "Majors"
- MAPMODE_MORE_MAPMODES_MAJORS_MAP_MODE: "§Y$more_mapmodes_majors_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_MAJORS_MAP_MODE_NAME: "$more_mapmodes_majors_map_mode$"
- MAPMODE_MORE_MAPMODES_MAJORS_MAP_MODE_DESCRIPTION: "Highlights the major countries."
- more_mapmodes_majors_map_mode_tooltip: "[From.Controller.GetMoreMapModesMajorsMapModeTooltip]"
- more_mapmodes_majors_map_mode_tooltip_delayed: ""
-
- more_mapmodes_world_war_map_mode: "World War"
- MAPMODE_MORE_MAPMODES_WORLD_WAR_MAP_MODE: "§Y$more_mapmodes_world_war_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_WORLD_WAR_MAP_MODE_NAME: "$more_mapmodes_world_war_map_mode$"
- MAPMODE_MORE_MAPMODES_WORLD_WAR_MAP_MODE_DESCRIPTION: "Shows which countries are currently at war."
- more_mapmodes_world_war_map_mode_tooltip: "[From.Controller.GetMoreMapModesWorldWarMapModeTooltip]"
- more_mapmodes_world_war_map_mode_tooltip_delayed: ""
-
- more_mapmodes_spymasters_map_mode: "Spy Masters"
- MAPMODE_MORE_MAPMODES_SPYMASTERS_MAP_MODE: "§Y$more_mapmodes_spymasters_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_SPYMASTERS_MAP_MODE_NAME: "$more_mapmodes_spymasters_map_mode$"
- MAPMODE_MORE_MAPMODES_SPYMASTERS_MAP_MODE_DESCRIPTION: "Shows which countries are spy masters of their faction."
- more_mapmodes_spymasters_map_mode_tooltip: "[From.Controller.GetMoreMapModesSpyMastersMapModeTooltip]"
- more_mapmodes_spymasters_map_mode_tooltip_delayed: "[From.Controller.GetMoreMapModesSpyMastersMapModeTooltipDelayed]"
-
- more_mapmodes_guarantees_map_mode: "Guarantees"
- MAPMODE_MORE_MAPMODES_GUARANTEES_MAP_MODE: "§Y$more_mapmodes_guarantees_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_GUARANTEES_MAP_MODE_NAME: "$more_mapmodes_guarantees_map_mode$"
- MAPMODE_MORE_MAPMODES_GUARANTEES_MAP_MODE_DESCRIPTION: "Shows the countries the selected target has guaranteed and is guaranteed by. \n$more_mapmodes_guarantees_map_mode_tooltip_delayed$"
- more_mapmodes_guarantees_map_mode_tooltip: "[From.Controller.GetMoreMapModesGuaranteesMapModeTooltip]"
- more_mapmodes_guarantees_map_mode_tooltip_delayed: "$MORE_MAPMODES_COUNTRY_MAP_MODE_WINDOW_BUTTON_TT_DELAYED$"
-
- more_mapmodes_subjects_map_mode: "Subjects"
- MAPMODE_MORE_MAPMODES_SUBJECTS_MAP_MODE: "§Y$more_mapmodes_subjects_map_mode$§! $MAPMODE_CONSTANT$"
- MAPMODE_MORE_MAPMODES_SUBJECTS_MAP_MODE_NAME: "$more_mapmodes_subjects_map_mode$"
- MAPMODE_MORE_MAPMODES_SUBJECTS_MAP_MODE_DESCRIPTION: "Shows the subjects and/or overlord of the selected target. \n$more_mapmodes_subjects_map_mode_tooltip_delayed$"
- more_mapmodes_subjects_map_mode_tooltip: "[From.Controller.GetMoreMapModesSubjectsMapModeTooltip]"
- more_mapmodes_subjects_map_mode_tooltip_delayed: "$MORE_MAPMODES_COUNTRY_MAP_MODE_WINDOW_BUTTON_TT_DELAYED$"
-
  # Scripted Localisation:
  more_mapmodes_show_mapicons_button_tt_disable: "§GClick§! to disable the map icons for all custom map modes that use mapicons."
  more_mapmodes_show_mapicons_button_tt_enable: "§GClick§! to enable the map icons for all custom map modes that use mapicons."
 
- more_mapmodes_core_map_mode_tt_core: "§Y[From.GetName]§! is our core state."
- more_mapmodes_core_map_mode_tt_owned: "§Y[From.GetName]§! is a non-core state of us."
- more_mapmodes_core_map_mode_tt_claimed: "§Y[From.GetName]§! is our claim."
- more_mapmodes_core_map_mode_tt_occupied: "§Y[From.GetName]§! is occupied by us."
- more_mapmodes_core_map_mode_tt_occupied_by_enemy: "§Y[From.GetName]§! is currently occupied by §R[From.Controller.GetNameWithFlag]§!."
- more_mapmodes_core_map_mode_tt_core_not_owned_but_controlled: "§Y[From.GetName]§! is currently occupied by us, but it is still owned by §R[From.Owner.GetNameWithFlag]§!."
- more_mapmodes_core_map_mode_tt_core_not_owned: "§Y[From.GetName]§! is owned by §Y[From.Owner.GetNameWithFlag]§!."
- more_mapmodes_core_map_mode_tt_occupied_info: "§Y[From.GetName]§! is originally owned by §R[From.Owner.GetNameWithFlag]§!."
+ more_mapmodes_core_map_mode_tt_core: "The state of §Y[From.GetName]§! is a §Ccore state§! of us."
+ more_mapmodes_core_map_mode_tt_claimed: "The state of §Y[From.GetName]§! is §Cclaimed§! by us."
+ more_mapmodes_core_map_mode_tt_owned: "The state of §Y[From.GetName]§! is a §Cnon-core state§! of us."
+ more_mapmodes_core_map_mode_tt_occupied: "The state of §Y[From.GetName]§! is §Coccupied§! by us."
+ more_mapmodes_core_map_mode_tt_owner_green_controller_green: "Owner: §G[From.Owner.GetNameWithFlag]§! \nController: §G[From.Controller.GetNameWithFlag]§!"
+ more_mapmodes_core_map_mode_tt_owner_green_controller_red: "Owner: §G[From.Owner.GetNameWithFlag]§! \nController: §R[From.Controller.GetNameWithFlag]§!"
+ more_mapmodes_core_map_mode_tt_owner_red_controller_green: "Owner: §R[From.Owner.GetNameWithFlag]§! \nController: §G[From.Controller.GetNameWithFlag]§!"
+ more_mapmodes_core_map_mode_tt_owner_red_controller_red: "Owner: §R[From.Owner.GetNameWithFlag]§! \nController: §R[From.Controller.GetNameWithFlag]§!"
 
  more_mapmodes_stability_map_mode_tt: "It changes by [?temp|2%=+] per week."
  more_mapmodes_war_support_map_mode_tt: "$more_mapmodes_stability_map_mode_tt$"
