開始時警告イベントの更新+資源表示修正

--- a/localisation/ib_topbar_l_japanese.yml
+++ b/localisation/ib_topbar_l_japanese.yml
@@ -21,3 +21,16 @@
  IB_RESOURCE_TRADE_TUN:0 "現在の§Hタングステン§!の状態\n\n消費量：[?resource_consumed@tungsten|0-]\n輸入量：[?resource_imported@tungsten|0-]"
  IB_RESOURCE_TRADE_STE:0 "現在の§H鉄鋼§!の状態\n\n消費量：[?resource_consumed@steel|0-]\n輸入量：[?resource_imported@steel|0-]"
  IB_RESOURCE_TRADE_CHR:0 "現在の§Hクロム§!の状態\n\n消費量：[?resource_consumed@chromium|0-]\n輸入量：[?resource_imported@chromium|0-]"
+
+ ib_oil_loc_key:0 "[?resource@oil|0Y]"
+ ib_oil_loc_key2:0 "[?resource@oil|0+]"
+ ib_aluminium_loc_key:0 "[?resource@aluminium|0Y]"
+ ib_aluminium_loc_key2:0 "[?resource@aluminium|0+]"
+ ib_rubber_loc_key:0 "[?resource@rubber|0Y]"
+ ib_rubber_loc_key2:0 "[?resource@rubber|0+]"
+ ib_tungsten_loc_key:0 "[?resource@tungsten|0Y]"
+ ib_tungsten_loc_key2:0 "[?resource@tungsten|0+]"
+ ib_steel_loc_key:0 "[?resource@steel|0Y]"
+ ib_steel_loc_key2:0 "[?resource@steel|0+]"
+ ib_chromium_loc_key:0 "[?resource@chromium|0Y]"
+ ib_chromium_loc_key2:0 "[?resource@chromium|0+]"
