--- a/localisation/japanese/strategic_region_names_l_japanese.yml
+++ b/localisation/japanese/strategic_region_names_l_japanese.yml
@@ -70,9 +70,9 @@
  STRATEGICREGION_69: "地中海東部"
  STRATEGICREGION_70: "カスピ海"
  STRATEGICREGION_71: "東インド洋"
- STRATEGICREGION_72: "マラッカ海峡"
+ STRATEGICREGION_72: "アンダマン海"
  STRATEGICREGION_73: "タイランド湾"
- STRATEGICREGION_74: "南東インド洋"
+ STRATEGICREGION_74: "南インド洋"
  STRATEGICREGION_75: "南シナ海"
  STRATEGICREGION_76: "東シナ海"
  STRATEGICREGION_77: "黄海"
@@ -90,14 +90,14 @@
  STRATEGICREGION_89: "西海岸"
  STRATEGICREGION_90: "日本沿岸"
  STRATEGICREGION_91: "バンダ海"
- STRATEGICREGION_92: "ティモール海"
- STRATEGICREGION_93: "ジャワ海"
+ STRATEGICREGION_92: "極東インド洋"
+ STRATEGICREGION_93: "マレー沖"
  STRATEGICREGION_94: "マリアナ諸島"
  STRATEGICREGION_95: "西天皇海山群"
  STRATEGICREGION_96: "北天皇海山群"
  STRATEGICREGION_97: "マーシャル諸島"
  STRATEGICREGION_98: "グレートオーストラリア湾"
- STRATEGICREGION_99: "極東インド洋"
+ STRATEGICREGION_99: "南東インド洋"
  STRATEGICREGION_100: "紅海"
  STRATEGICREGION_101: "ベンガル湾"
  STRATEGICREGION_102: "東アフリカ沿岸"
@@ -156,7 +156,7 @@
  STRATEGICREGION_155: "南満洲"
  STRATEGICREGION_156: "南オーストラリア"
  STRATEGICREGION_157: "ニュージーランド"
- STRATEGICREGION_158: "小スンダ列島"
+ STRATEGICREGION_158: "小スンダ列島沖"
  STRATEGICREGION_159: "ボルネオ"
  STRATEGICREGION_160: "フィリピン"
  STRATEGICREGION_161: "アイスランド"
@@ -165,7 +165,7 @@
  STRATEGICREGION_164: "江南"
  STRATEGICREGION_165: "広東"
  STRATEGICREGION_166: "ハドソン湾"
- STRATEGICREGION_167: "ニューギニア"
+ STRATEGICREGION_167: "東ニューギニア"
  STRATEGICREGION_168: "アドリア海"
  STRATEGICREGION_169: "ティレニア海"
  STRATEGICREGION_170: "フロリダ沿岸"
@@ -311,11 +311,11 @@
  STRATEGICREGION_310: "オーストラリア辺境地帯"
  STRATEGICREGION_311: "ニューサウスウェールズ"
  STRATEGICREGION_312: "スラウェシ"
- STRATEGICREGION_313: "マルク"
+ STRATEGICREGION_313: "西ニューギニア"
  STRATEGICREGION_314: "北日本"
  STRATEGICREGION_315: "サハリン及び千島列島"
  STRATEGICREGION_316: "南日本"
- STRATEGICREGION_317: "ジャワ"
+ STRATEGICREGION_317: "ジャワ海"
  STRATEGICREGION_318: "モンゴル西部"
  STRATEGICREGION_319: "寧夏"
  STRATEGICREGION_320: "雲南"
