--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -11,7 +11,12 @@
  operation_Uranus:0 "天王星作戦"
  operation_Bagration:0 "バグラチオン作戦"
  fall_of_moscow:0 "モスクワ陥落"
- WW2_new_deal:0 "ニューディール政策"
+
+##パルチザン##
+ resistance_20: "組織立った抵抗"
+ resistance_35: "大胆な抵抗"
+ resistance_50: "蜂起"
+ resistance_65: "反乱"
 
 ##ゲームルール##
  ib_international_market_rule: "国際市場"
