和訳修正+追加

--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -2588,7 +2588,7 @@
  VICTORY_POINTS_7213: "テルエル"
  VICTORY_POINTS_11234: "ヴェリーキエ・ルーキ"
  VICTORY_POINTS_387: "ネヴェリ"
- VICTORY_POINTS_6324: "島"
+ VICTORY_POINTS_6324: "オストロフ"
  VICTORY_POINTS_11109: "スタラヤルーサ"
  VICTORY_POINTS_14830: "デミャンスク"
  VICTORY_POINTS_11048: "ボロヴィチ"
