--- a/localisation/ib_naval_battery_l_japanese.yml
+++ b/localisation/ib_naval_battery_l_japanese.yml
@@ -306,8 +306,12 @@
  ib_shell_tech4:0 "改良小型砲弾・四連装20mm対空機銃"
  ib_shell_tech4_desc:0 "来襲する敵機を追い払うための艦載用機銃。濃密な弾幕の形成が可能となっており、発展した発射機構を小型艦砲にも取り込むことにより、その威力が大きく向上する。"
 
- EQ_MOD_CAT_ship_light_battery_ib_TITLE:0 "駆逐艦砲"
- EQ_MOD_CAT_ship_light_dp_battery_TITLE:0 "高角砲"
- EQ_MOD_CAT_ship_medium_battery_cl_TITLE:0 "軽巡洋艦砲"
- EQ_MOD_CAT_ship_medium_battery_ib_TITLE:0 "重巡洋艦砲"
- EQ_MOD_CAT_ship_heavy_battery_ib_TITLE:0 "戦艦砲"
+ EQ_MOD_CAT_ship_4in_battery_TITLE:0 "4インチ艦砲"
+ EQ_MOD_CAT_ship_5in_battery_TITLE:0 "5インチ艦砲"
+ EQ_MOD_CAT_ship_5Hin_battery_TITLE:0 "5.5インチ艦砲"
+ EQ_MOD_CAT_ship_6in_battery_TITLE:0 "6インチ艦砲"
+ EQ_MOD_CAT_ship_8in_battery_TITLE:0 "8インチ艦砲"
+ EQ_MOD_CAT_ship_14in_battery_TITLE:0 "14インチ艦砲"
+ EQ_MOD_CAT_ship_15in_battery_TITLE:0 "15インチ艦砲"
+ EQ_MOD_CAT_ship_16in_battery_TITLE:0 "16インチ艦砲"
+ EQ_MOD_CAT_ship_18in_battery_TITLE:0 "18インチ艦砲"
