技術先行ペナルティの調整

--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -719,3 +719,38 @@
  IB_TAC_BOMBER_TEXT:0 "戦術爆撃機・艦上攻撃機"
  IB_SCOUT_PLANE_TEXT:0 "艦上偵察機"
  IB_tank_design_bonus:0 "戦車設計局"
+
+
+##construction cost##
+ modifier_production_cost_infrastructure_factor: "§Yインフラ§!建設コスト"
+ modifier_production_cost_infrastructure_factor_desc: "インフラ建設コストを補正する。"
+ modifier_production_cost_industrial_complex_factor: "§Y民需工場§!建設コスト"
+ modifier_production_cost_industrial_complex_factor_desc: "民需工場建設コストを補正する。"
+ modifier_production_cost_arms_factory_factor: "§Y軍需工場§!建設コスト"
+ modifier_production_cost_arms_factory_factor_desc: "軍需工場建設コストを補正する。"
+ modifier_production_cost_dockyard_factor: "§Y海軍造船所§!建設コスト"
+ modifier_production_cost_dockyard_factor_desc: "海軍造船所建設コストを補正する。"
+ modifier_production_cost_air_base_factor: "§Y航空基地§!建設コスト"
+ modifier_production_cost_air_base_factor_desc: "航空基地建設コストを補正する。"
+ modifier_production_cost_supply_node_factor: "§Y補給ハブ§!建設コスト"
+ modifier_production_cost_supply_node_factor_desc: "補給ハブ建設コストを補正する。"
+ modifier_production_cost_rail_way_factor: "§Y鉄道§!建設コスト"
+ modifier_production_cost_rail_way_factor_desc: "鉄道建設コストを補正する。"
+ modifier_production_cost_naval_base_factor: "§Y海軍基地§!建設コスト"
+ modifier_production_cost_naval_base_factor_desc: "海軍基地建設コストを補正する。"
+ modifier_production_cost_bunker_factor: "§Y陸上要塞§!建設コスト"
+ modifier_production_cost_bunker_factor_desc: "陸上要塞建設コストを補正する。"
+ modifier_production_cost_coastal_bunker_factor: "§Y沿岸要塞§!建設コスト"
+ modifier_production_cost_coastal_bunker_factor_desc: "沿岸要塞建設コストを補正する。"
+ modifier_production_cost_anti_air_building_factor: "§Y対空砲§!建設コスト"
+ modifier_production_cost_anti_air_building_factor_desc: "対空砲建設コストを補正する。"
+ modifier_production_cost_synthetic_refinery_factor: "§Y合成精製所§!建設コスト"
+ modifier_production_cost_synthetic_refinery_factor_desc: "合成精製所建設コストを補正する。"
+ modifier_production_cost_fuel_silo_factor: "§Y燃料貯蔵庫§!建設コスト"
+ modifier_production_cost_fuel_silo_factor_desc: "燃料貯蔵庫建設コストを補正する。"
+ modifier_production_cost_radar_station_factor: "§Yレーダー基地§!建設コスト"
+ modifier_production_cost_radar_station_factor_desc: "レーダー基地建設コストを補正する。"
+ modifier_production_cost_rocket_site_factor: "§Yロケット発射場§!建設コスト"
+ modifier_production_cost_rocket_site_factor_desc: "ロケット発射場建設コストを補正する。"
+ modifier_production_cost_nuclear_reactor_factor: "§Y原子炉§!建設コスト"
+ modifier_production_cost_nuclear_reactor_factor_desc: "原子炉建設コストを補正する。"
