--- a/localisation/ib_tech_category_loc_l_japanese.yml
+++ b/localisation/ib_tech_category_loc_l_japanese.yml
@@ -24,6 +24,7 @@
  tcl_infantry_weapons_tt: "$tcl$§C兵器および装備§!"
  tcl_night_vision_tt: "$tcl$§C暗視装置§!" #no loc tech category
  tcl_motorized_equipment_tt: "$tcl$§C車両§!"
+ tcl_mechanised_equipment_tt: "$tcl$§C車両§!,§C装甲兵員輸送車§!"
  tcl_cat_armored_cars_tt: "$tcl$§C車両§!,§C装甲車§!"
 #戦車
  tcl_gwtank_tt: "$tcl$§C機甲§!,§C中戦車モデル§!,§C重戦車モデル§!"
@@ -42,7 +43,6 @@
  tcl_cv_tech_tt: "$tcl$§C海軍§!,§C航空母艦§!"
  tcl_ss_tech_tt: "$tcl$§C海軍§!,§C潜水艦§!"
  tcl_ship_modules_tech_tt: "$tcl$§C海軍§!,§C海軍艤装§!"
- tcl_snorkel_tt: "$tcl$§C海軍§!,§C潜水艦§!,§C海軍艤装§!"
 #海軍支援
  tcl_cat_ship_battery_tt: "$tcl$§C海軍§!,§C海軍艤装§!,§C小型砲§!,§C中型砲§!,§C大型砲§!"
  tcl_cat_ship_light_battery_tt: "$tcl$§C海軍§!,§C海軍艤装§!,§C小型砲§!"
@@ -52,9 +52,9 @@
  tcl_cat_torpedoes_tt: "$tcl$§C海軍§!,§C海軍艤装§!,§C魚雷§!"
  tcl_tp_tech_tt: "$tcl$§C海軍§!,§C海軍輸送艦§!"
 #空軍
- tcl_light_air_tt: "$tcl$§C航空技術§!,§C軽航空機§!,§C戦闘機§!,§C近接航空支援機§!,§C対艦攻撃機§!,§C艦載機§!"
- tcl_medium_air_tt: "$tcl$§C航空技術§!,§C中航空機§!,§C戦術爆撃機§!,§C重戦闘機§!"
- tcl_heavy_air_tt: "$tcl$§C航空技術§!,§C重航空機§!,§C戦略爆撃機§!"
+ tcl_light_air_tt: "$tcl$§C航空技術§!,§C軽航空機§!"
+ tcl_medium_air_tt: "$tcl$§C航空技術§!,§C中航空機§!"
+ tcl_heavy_air_tt: "$tcl$§C航空技術§!,§C重航空機§!"
  tcl_cat_air_bombs_tt: "$tcl$§C航空技術§!,§C航空機モジュール§!,§C航空機搭載爆弾§!"
  tcl_cat_air_guns_tt: "$tcl$§C航空技術§!,§C航空機モジュール§!,§C航空機武装§!"
  tcl_plane_modules_tech_tt: "$tcl$§C航空技術§!,§C航空機モジュール§!"
