--- a/localisation/ib_decision_l_japanese.yml
+++ b/localisation/ib_decision_l_japanese.yml
@@ -1,5 +1,24 @@
 ﻿l_japanese:
- convoys_add_decision:0 "輸送船所持数の更新用ディシジョン"
- convoys_add_decision_desc:0 "マルチプレイ時の途中参加などでロビーが開いた際に輸送船が0になるバグがある為、その対応の為のディシジョンです"
- gain_convoys_from_pp:0 "輸送船を政治力で追加"
- gain_convoys_from_CP:0 "輸送船を指揮力で追加"
+ convoys_add_decision:0 "輸送船所持数の更新用＆補充ディシジョン"
+ convoys_add_decision_desc:0 "マルチプレイ時の途中参加などでロビーが開いた際に輸送船が0になるバグがある為、又は海域禁止ボタン削除、その対応の為のディシジョンです"
+ gain_1convoys_from_10pp:0 "1隻輸送船を10政治力で追加"
+ gain_10convoys_from_100pp:0 "10隻輸送船を100政治力で追加"
+ gain_100convoys_from_1000pp:0 "100隻輸送船を1000政治力で追加"
+ gain_1convoys_from_10CP:0 "1隻輸送船を10指揮力で追加"
+ gain_10convoys_from_100CP:0 "10隻輸送船を100指揮力で追加"
+ gain_50convoys_from_500CP:0 "50隻輸送船を500指揮力で追加"
+ gain_1convoys_from_10NavyXP:0 "1隻輸送船を10海軍経験値で追加"
+ gain_10convoys_from_100NavyXP:0 "10隻輸送船を100海軍経験値で追加"
+ gain_100convoys_from_1000NavyXP:0 "100隻輸送船を1000海軍経験値で追加"
+ decision_cost_CP_10: "£command_power  §Y10§!"
+ decision_cost_CP_10_blocked: "£command_power  §R10§!"
+ decision_cost_CP_10_tooltip: "このディシジョンを実行するには、£command_power  §Y10§!が必要"
+ decision_cost_CP_100: "£command_power  §Y100§!"
+ decision_cost_CP_100_blocked: "£command_power  §R100§!"
+ decision_cost_CP_100_tooltip: "このディシジョンを実行するには、£command_power  §Y100§!が必要"
+ decision_cost_CP_500: "£command_power  §Y500§!"
+ decision_cost_CP_500_blocked: "£command_power  §R500§!"
+ decision_cost_CP_500_tooltip: "このディシジョンを実行するには、£command_power  §Y500§!が必要"
+ decision_cost_navy_experience: "海軍経験値を消費する"
+ decision_cost_navy_experience_blocked: "海軍経験値が不足している"
+ decision_cost_navy_experience_tooltip: "このディシジョンを実行するには、海軍経験値が必要"
