--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -41,6 +41,7 @@
  internationalism_focus: "社会主義重視"
  nationalism: "全体主義"
  internationalism: "社会主義"
+ deterrence_ib: "戦争抑止政策の反動"
 
 ##工業NFツリー##
  construction_effort: "民需建設への注力"
