--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -130,7 +130,7 @@
  superior_firepower_army_spirit_tt: "歩兵及び機動歩兵ユニット設計コスト §G-33.00%§!\n特殊歩兵ユニット設計コスト §G-66.00%§!\n砲列兵科及び機動砲列兵科ユニット設計コスト §G-100.00%§!\n戦車ユニット設計コスト §G-33.00%§!\n火炎放射戦車ユニット設計コスト §G-100.00%§!\n水陸両用戦車及び装軌車ユニット設計コスト §G-33.00%§!\n偵察中隊ユニット設計コスト §G-100.00%§!\n工兵及び戦闘工兵中隊ユニット設計コスト §G-100.00%§!\n整備中隊ユニット設計コスト §G-100.00%§!\n野戦中隊ユニット設計コスト §G-100.00%§!\n補給中隊ユニット設計コスト §G-100.00%§!\n通信中隊ユニット設計コスト §G-100.00%§!"
  grand_battleplan_army_spirit_tt: "歩兵ユニット設計コスト §G-66.00%§!\n特殊歩兵ユニット設計コスト §G-100.00%§!\n砲列兵科ユニット設計コスト §G-66.00%§!\n火炎放射戦車ユニット設計コスト §G-33.00%§!\n水陸両用戦車及び装軌車ユニット設計コスト §G-100.00%§!\n戦車派生型ユニット設計コスト §G-100.00%§!\n工兵及び戦闘工兵中隊ユニット設計コスト §G-100.00%§!"
  mass_assault_army_spirit_tt: "歩兵及び機動歩兵ユニット設計コスト §G-100.00%§!\n砲列兵科ユニット設計コスト §G-33.00%§!\n戦車ユニット設計コスト §G-66.00%§!\n戦車派生型ユニット設計コスト §G-33.00%§!"
-＃ゆきくうhohff#
+
 ##海軍NFツリー##
  naval_effort:0 "海軍への注力"
  naval_effort_2:0 "海軍への注力Ⅱ"
@@ -711,6 +711,11 @@
  assault_avaition: "§R航空襲撃§!"
  dive_bomber_theorist: "§R急降下爆撃の信奉者§!"
 
+##将軍特性##
+ armored_ratio_over_99: "装甲師団の比率 > §H99%§!"
+ cavalary_ratio_over_99: "騎兵、自動車化および機械化師団の比率 > §H99%§!"
+ infantry_ratio_over_99: "歩兵師団の比率 > §H99%§!"
+ artillery_ratio_over_99: "砲兵師団の比率 > §H99%§!"
 
 ##提督特性##
  ib_hit_chance:0 "正確無比"
