--- a/localisation/japanese/strategic_region_names_l_japanese.yml
+++ b/localisation/japanese/strategic_region_names_l_japanese.yml
@@ -47,7 +47,7 @@
  STRATEGICREGION_46: "バレンツ海"
  STRATEGICREGION_47: "イベリア沿岸"
  STRATEGICREGION_48: "アフリカ沿岸"
- STRATEGICREGION_49: "北大西洋海嶺"
+ STRATEGICREGION_49: "中部大西洋沿岸"
  STRATEGICREGION_50: "ラブラドル海"
  STRATEGICREGION_51: "中部大西洋海隙"
  STRATEGICREGION_52: "メキシコ湾"
@@ -55,7 +55,7 @@
  STRATEGICREGION_54: "東海岸"
  STRATEGICREGION_55: "ニューファンドランド海"
  STRATEGICREGION_56: "中部大西洋"
- STRATEGICREGION_57: "サルガッソ海"
+ STRATEGICREGION_57: "五大湖周辺"
  STRATEGICREGION_58: "中央大西洋海隙"
  STRATEGICREGION_59: "デメララ海域"
  STRATEGICREGION_60: "西インド洋"
@@ -115,7 +115,7 @@
  STRATEGICREGION_114: "北太平洋"
  STRATEGICREGION_115: "北東太平洋"
  STRATEGICREGION_116: "ペルシア北部"
- STRATEGICREGION_117: "中部大西洋沿岸部"
+ STRATEGICREGION_117: "ワシントンDC"
  STRATEGICREGION_118: "カリフォルニア"
  STRATEGICREGION_119: "アメリカ南西部"
  STRATEGICREGION_120: "グレートプレーンズ"
@@ -168,7 +168,7 @@
  STRATEGICREGION_167: "東ニューギニア"
  STRATEGICREGION_168: "アドリア海"
  STRATEGICREGION_169: "ティレニア海"
- STRATEGICREGION_170: "フロリダ沿岸"
+ STRATEGICREGION_170: "アメリカ中西部"
  STRATEGICREGION_171: "カスカディア沿岸"
  STRATEGICREGION_172: "太平洋ライン海嶺"
  STRATEGICREGION_173: "北海東部"
@@ -196,7 +196,7 @@
  STRATEGICREGION_195: "西オーストラリア"
  STRATEGICREGION_196: "ナジュド"
  STRATEGICREGION_197: "ニューイングランド"
- STRATEGICREGION_198: "アメリカ中西部"
+ STRATEGICREGION_198: "アメリカ中東部"
  STRATEGICREGION_199: "ロッキー山脈"
  STRATEGICREGION_200: "青海"
  STRATEGICREGION_201: "南ペルー"
