--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -128,9 +128,9 @@
  cat_paratroopers_doctrine_cost_factor: "空挺兵ドクトリンコスト"
 
 ##陸軍将校団##
- mobile_warfare_army_spirit_tt: "歩兵及び機動歩兵ユニット設計コスト §G-66.00%§!\n戦車ユニット設計コスト §G-100.00%§!\n戦車派生型ユニット設計コスト §G-66.00%§!\n機動砲列兵科ユニット設計コスト §G-66.00%§!"
+ mobile_warfare_army_spirit_tt: "歩兵及び自転車,機動歩兵ユニット設計コスト §G-66.00%§!\n戦車ユニット設計コスト §G-100.00%§!\n戦車派生型ユニット設計コスト §G-66.00%§!\n機動砲列兵科ユニット設計コスト §G-66.00%§!"
  superior_firepower_army_spirit_tt: "歩兵及び機動歩兵ユニット設計コスト §G-66.00%§!\n特殊歩兵ユニット設計コスト §G-66.00%§!\n砲列兵科及び機動砲列兵科ユニット設計コスト §G-100.00%§!\n戦車ユニット設計コスト §G-33.00%§!\n火炎放射戦車ユニット設計コスト §G-66.00%§!\n水陸両用戦車及び装軌車ユニット設計コスト §G-66.00%§!\n支援中隊ユニット設計コスト §G-100.00%§!"
- grand_battleplan_army_spirit_tt: "歩兵ユニット設計コスト §G-66.00%§!\n特殊歩兵ユニット設計コスト §G-100.00%§!\n砲列兵科ユニット設計コスト §G-66.00%§!\n戦車ユニット設計コスト §G-33.00%§!\n火炎放射戦車ユニット設計コスト §G-100.00%§!\n水陸両用戦車及び装軌車ユニット設計コスト §G-100.00%§!\n戦車派生型ユニット設計コスト §G-100.00%§!\n工兵及び戦闘工兵中隊ユニット設計コスト §G-100.00%§!"
+ grand_battleplan_army_spirit_tt: "歩兵及び自転車ユニット設計コスト §G-66.00%§!\n特殊歩兵ユニット設計コスト §G-100.00%§!\n砲列兵科ユニット設計コスト §G-66.00%§!\n戦車ユニット設計コスト §G-33.00%§!\n火炎放射戦車ユニット設計コスト §G-100.00%§!\n水陸両用戦車及び装軌車ユニット設計コスト §G-100.00%§!\n戦車派生型ユニット設計コスト §G-100.00%§!\n工兵及び戦闘工兵中隊ユニット設計コスト §G-100.00%§!"
  mass_assault_army_spirit_tt: "歩兵,機動歩兵及び砲列大隊ユニット設計コスト §G-100.00%§!\n砲列中隊ユニット設計コスト §G-33.00%§!\n戦車ユニット設計コスト §G-66.00%§!\n戦車派生型ユニット設計コスト §G-33.00%§!"
  tactic_breakthrough_preferred_weight_factor: "優先戦術の場合、§Y突破§!戦術追加の機会"
 
